fix(tljne): fixed title alignment, converted urls to heroku

--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -19,8 +19,9 @@ h1 {
   display: inline-grid;
   grid-template-columns: 100px auto;
   grid-template-rows: 1fr auto;
+  align-content: center;
   justify-items: start;
-  align-items: end;
+  align-items: center;
   column-gap: 10px;
   font-size: 60px;
   row-gap: 20px;
